force-app/main/default/objects/FieloPLT__ProgramAssignment__c/FieloPLT__ProgramAssignment__c.object-meta.xml
<CustomObject>
    <label>Program Assignment</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Program Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programs Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>