force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Programs Assignment</relationshipLabel>
    <relationshipName>ActionAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>