force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__External_Id__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>