force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__Model__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>FieloPLT__Model__c</referenceTo>
    <relationshipLabel>Programs Assignment</relationshipLabel>
    <relationshipName>ModelAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>