force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__PageSettings__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PageSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Settings</label>
    <referenceTo>FieloPLT__PageSettings__c</referenceTo>
    <relationshipLabel>Programs Assignment</relationshipLabel>
    <relationshipName>PageSettingsAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>