force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__Profile__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Profile__c</fullName>
    <inlineHelpText>Name of a Profile or Permission Set</inlineHelpText>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>