force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Programs Assignment</relationshipLabel>
    <relationshipName>Programs_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>