force-app/main/default/objects/FieloPLT__ProgramAssignment__c/fields/FieloPLT__RecordType__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RecordType__c</fullName>
    <description>Developer Name for Record Type</description>
    <inlineHelpText>Developer Name for Record Type</inlineHelpText>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>