force-app/main/default/objects/FieloPLT__ProgramAssignment__c/validationRules/FieloPLT__FilterMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__FilterMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>FieloPLT__Profile__c = null &amp;&amp;
FieloPLT__Program__c = null &amp;&amp;
FieloPLT__RecordType__c = null</errorConditionFormula>
    <errorMessage>Please add a Program, Record Type or a Profile.</errorMessage>
</ValidationRule>