force-app/main/default/objects/FieloPLT__ProgramAssignment__c/validationRules/FieloPLT__ProgramAssigmentForProgramModel.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ProgramAssigmentForProgramModel</fullName>
    <active>true</active>
    <errorConditionFormula>FieloPLT__Model__c != null &amp;&amp;
ISPICKVAL(FieloPLT__Model__r.FieloPLT__Type__c,&apos;Program&apos;) &amp;&amp;
FieloPLT__Program__c != null</errorConditionFormula>
    <errorMessage>Invalid assignment to Program for Models of Type = &quot;Program&quot;</errorMessage>
</ValidationRule>