force-app/main/default/objects/FieloPLT__ProgramAssignment__c/validationRules/FieloPLT__RecordMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__RecordMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>FieloPLT__Action__c = null &amp;&amp;
FieloPLT__Model__c = null &amp;&amp;
FieloPLT__PageSettings__c = null</errorConditionFormula>
    <errorMessage>Please add an Action, Model or Page Setting.</errorMessage>
</ValidationRule>